2002-07-16  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.h: Add some state to the SoupAuth
	structure.

	* src/libsoup/soup-message.c (authorize_handler): Check the state
	in the SoupAuth object.  If the SoupAuth failed, or we were in the
	pending state and were the controlling message, throw a "Can't
	authenticate" error.  If it's pending and we're not the
	controlling message, just requeue ourselves.  Otherwise, proceed
	as normal.
	(validate_authorize_handler): Set the SoupAuths on the proxy and
	message contexts to successful.

2002-07-15  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.c (soup_auth_set_context): If the auth
	we're adding and the old auth in the hash are the same, don't go
	around freeing things all willy-nilly.

	* src/libsoup/soup-message.c (authorize_handler): Don't blindly
	create new SoupAuths when there may be perfectly good ones around
	in the hash that we can (and perhaps must) use.

2002-07-02  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-server.c (check_close_connection): Added.
	Checks to see if we should keep the connection around, and obeys
	the spec (RFC 2616: 8.1.2.1 Negotiation).  HTTP 1.0 connections
	should close by default unless "Connection: keep-alive" is
	specified, and HTTP 1.1 connections should stay open by default
	unless "Connection: close" is specified.

2002-07-01  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-transfer.c (soup_transfer_read_cb): Back out my
	last change, as it broke soup-server.c.

2002-06-24  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-transfer.c (soup_transfer_read_cb): If we no
	longer have a read_chunk_cb callback, we can just cancel the
	read.  Fixes a crash when you soup_message_cancel() in the middle
	of a download.

2002-06-19  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump SOUP_AGE up to 3, SOUP_CURRENT up to 6.
	Update version to 0.7.5.

	* src/libsoup/soup-private.h (VERSION): Update to 0.7.5

	* src/libsoup/soup-server.c (soup_server_context_get_client_address,