@@ -52,6 +52,9 @@ SoupAuth *soup_auth_lookup                 (SoupContext   *ctx);
 void      soup_auth_set_context            (SoupAuth      *auth,
 					    SoupContext   *ctx);
 
+void      soup_auth_invalidate             (SoupAuth      *auth,
+					    SoupContext   *ctx);
+
 SoupAuth *soup_auth_new_from_header_list   (const SoupUri *uri,
 					    const GSList  *header);
 
